# HomeSec

./: .gitignore  start-principal.sh
principal/: Cargo.toml  build.rs
principal/proto/: image-input.proto
principal/src/: server.rs
