[package]
name = "principal"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the HelloWorld gRPC server
name = "image-input-server"
path = "src/server.rs"

[dependencies]
tonic = "*"
prost = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
protoc = "2.28.0"

[build-dependencies]
tonic-build = "*"
